[package]
name = "chobitlibs"
version = "0.3.3"
edition = "2021"

description = "Single file libraries for my project."
repository = "https://github.com/MetalPhaeton/chobitlibs"

license = "WTFPL"
readme = "README.md"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "chobit_map_bench"
harness = false
