[package]
name = "chobitlibs"
version = "0.11.0"
edition = "2021"

description = "Single file libraries for my project."
repository = "https://github.com/MetalPhaeton/chobitlibs"

license = "WTFPL"
readme = "README.md"

[dev-dependencies]
criterion = "0.4"
turbo-json-checker = "2.0"

[[bench]]
name = "chobit_map_bench"
harness = false

[[bench]]
name = "chobit_complex_bench"
harness = false
